--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "type": "commonjs",
     "main": "src/server.js",
     "dependencies": {
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.2.1",
         "firebase-admin": "^13.6.0",
+        "http-errors": "^2.0.1",
         "mongoose": "^9.0.1",
-        "nodemon": "^3.1.11"
+        "morgan": "^1.10.1",
+        "nodemon": "^3.1.11",
+        "path": "^0.12.7"
     }
 }
